--- a/.cwmrc
+++ b/.cwmrc
@@ -7,7 +7,7 @@ borderwidth 2
 
 #COMMANDS MENU:
 command Firefox firefox
-command Xterm xterm
+command Xterm 'xterm --class xt-from-menu'
 
 # GROUPS
 # 1-MEDIA
@@ -17,10 +17,14 @@ autogroup 2 "sakura,Games"
 # 4-WEB
 autogroup 4 "Firefox"
 #autogroup 4 "sakura,Web"
-# change defaults to "grouponly" (from just group)
+
+# desktops
 bind-key CM-1 group-only-1
 bind-key CM-2 group-only-2
 bind-key CM-3 group-only-3
 bind-key CM-4 group-only-4
 bind-key CM-5 group-only-5
 bind-key CM-6 group-only-6
+
+bind-mouse S-1 window-raise
+
